--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,8 @@
 <ion-tabs color="pallete-yellow">
   <ion-tab [root]="tab1Root" tabIcon="home" tabsHideOnSubPages="true"></ion-tab>
   <!-- <ion-tab [root]="tab1Root" tabIcon="stats"></ion-tab> -->
-  <ion-tab [root]="tab2Root" tabIcon="person" tabsHideOnSubPages="true"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="people" tabsHideOnSubPages="true"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="calendar" tabsHideOnSubPages="true"></ion-tab>
+  <ion-tab [root]="tab4Root" tabIcon="person" tabsHideOnSubPages="true"></ion-tab>
+
 </ion-tabs>
