--- a/src/pages/detail-member/detail-member.html
+++ b/src/pages/detail-member/detail-member.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>detail-member</ion-title>
+    <ion-title>{{ dataMember.nama }}</ion-title>
   </ion-navbar>
 </ion-header>
 
