--- a/src/pages/event-paguyuban/event-paguyuban.html
+++ b/src/pages/event-paguyuban/event-paguyuban.html
@@ -6,10 +6,47 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>event-paguyuban</ion-title>
+    <ion-title>Daftar Acara</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
+
+  <ion-card *ngFor="let item of resultJadwal">
+
+    <img src="https://www.seoclerk.com/pics/311379-1ZiBxt1420223328.jpg">
+    <ion-fab right top>
+      <button ion-fab>
+        <ion-icon name="pin"></ion-icon>
+      </button>
+    </ion-fab>
+  
+    <ion-item>
+      <ion-icon name="bookmark" item-start large></ion-icon>
+      <h2>{{ item.nama_acara }}</h2>
+      <p style="white-space: normal;">{{ item.detail_acara }}</p>
+    </ion-item>
+  
+    <ion-item>
+      <ion-icon name="pin" item-start large ></ion-icon>
+      <h2>Rumah {{ item.tempat_acara }}</h2>
+      <p style="white-space: normal;">Alamat : {{ item.alamat_acara }}</p>
+
+    </ion-item>
+  
+    <ion-item>
+      <span item-start> {{ item.tgl_acara }} </span>
+      <small item-start>(Dibuar oleh : {{item.dibuat_oleh}})</small>
+      <button ion-button icon-start clear item-end color="danger" (click)="Delete(item.key)">
+        <ion-icon name="trash"></ion-icon>
+      </button>
+    </ion-item>
+  
+  </ion-card>
+
+    <!-- Fab Button -->
+    <ion-fab bottom right>
+      <button ion-fab mini (click)="toCreateEvent()" ><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
 
 </ion-content>
