--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs color="pallete-yellow">
+<ion-tabs color="pallete-blueold">
   <ion-tab [root]="tab1Root" tabIcon="home" tabsHideOnSubPages="true"></ion-tab>
   <!-- <ion-tab [root]="tab1Root" tabIcon="stats"></ion-tab> -->
   <ion-tab [root]="tab2Root" tabIcon="people" tabsHideOnSubPages="true"></ion-tab>
