--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
+  <ion-navbar color="pallete-blueold">
+    <ion-title style="text-align: center;">
+      PKBM
     </ion-title>
   </ion-navbar>
 </ion-header>
