--- a/src/pages/event-paguyuban/event-paguyuban.html
+++ b/src/pages/event-paguyuban/event-paguyuban.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pallete-blueold">
     <ion-title>Daftar Acara</ion-title>
   </ion-navbar>
 </ion-header>
@@ -15,11 +15,6 @@
   <ion-card *ngFor="let item of resultJadwal">
 
     <img src="https://www.seoclerk.com/pics/311379-1ZiBxt1420223328.jpg">
-    <ion-fab right top>
-      <button ion-fab>
-        <ion-icon name="pin"></ion-icon>
-      </button>
-    </ion-fab>
   
     <ion-item>
       <ion-icon name="bookmark" item-start large></ion-icon>
@@ -36,8 +31,8 @@
   
     <ion-item>
       <span item-start> {{ item.tgl_acara }} </span>
-      <small item-start>(Dibuar oleh : {{item.dibuat_oleh}})</small>
-      <button ion-button icon-start clear item-end color="danger" (click)="Delete(item.key)">
+      <small item-start>(Dibuat oleh : {{item.dibuat_oleh}})</small>
+      <button *ngIf="roles != 6" ion-button icon-start clear item-end color="danger" (click)="Delete(item.key)">
         <ion-icon name="trash"></ion-icon>
       </button>
     </ion-item>
@@ -45,8 +40,8 @@
   </ion-card>
 
     <!-- Fab Button -->
-    <ion-fab bottom right>
-      <button ion-fab mini (click)="toCreateEvent()" ><ion-icon name="add"></ion-icon></button>
+    <ion-fab bottom right *ngIf="roles != 6" >
+      <button color="pallete-redold" ion-fab mini (click)="toCreateEvent()" ><ion-icon name="add"></ion-icon></button>
     </ion-fab>
 
 </ion-content>
