--- a/src/pages/edit-profile/edit-profile.html
+++ b/src/pages/edit-profile/edit-profile.html
@@ -5,12 +5,12 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pallete-blueold">
     <ion-title>Edit Profile</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 
   <ion-list>
 
@@ -30,8 +30,9 @@
       <ion-input type="number" [(ngModel)]="data.phone"></ion-input>
     </ion-item>
 
-    
-    <button ion-button block primary (click)="editProfile()">Update Profile</button>
+    <ion-item>
+      <button ion-button block round (click)="editProfile()" color="pallete-redold">Update Profile</button>
+    </ion-item>
 
   </ion-list>
   
