--- a/src/pages/detail-info/detail-info.html
+++ b/src/pages/detail-info/detail-info.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pallete-blueold">
     <ion-title>Profile</ion-title>
   </ion-navbar>
 </ion-header>
@@ -38,7 +38,7 @@
         {{ phone }}
       </p>
 
-      <button ion-button color="danger" block class="btn_login" (click)="logOut()" > <span class="next"> Logout </span> </button>
+      <button ion-button outline round color="pallete-redold" block class="btn_login" (click)="logOut()" > <span class="next"> Logout </span> </button>
     </ion-card-content>
   </ion-card>
 </ion-content>
