--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pallete-blueold">
     <ion-title>Buat Acara</ion-title>
   </ion-navbar>
 </ion-header>
@@ -44,6 +44,6 @@
   
   </ion-list>
 
-  <button (click)="createEvent()" ion-button block primary>Buat</button>
+  <button (click)="createEvent()" ion-button block round color="pallete-redold">Buat</button>
 
 </ion-content>
