ubah warna navbar dan button

--- a/src/pages/add-member/add-member.html
+++ b/src/pages/add-member/add-member.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="pallete-blueold">
     <ion-title>Tambah Anggota</ion-title>
   </ion-navbar>
 </ion-header>
@@ -71,7 +71,7 @@
       </ion-select>
     </ion-item>
 
-      <button (click)="AddMember()"  ion-button block primary>Add New Member</button>
+      <button (click)="AddMember()"  ion-button block round color="pallete-redold">Add New Member</button>
   
   </ion-list>
 
